--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,10 @@ h6 {
 .app-primary-dua-80 {
   color: #273C4D;
 }
+
+.app-primary-dua-100 {
+  color: #344579;
+}
 /* Close Style Color Primary Dua */
 
 /* Open Style Color Gradient */
@@ -651,6 +655,56 @@ h6 {
 } */
 /*========= Close Style portfolio =========*/
 
+
+
+/*========= Open Style count-image-1 =========*/
+.group-image-hero {
+  position: relative;
+}
+
+.count-image-1 {
+  /* width: 25px; */
+  position: absolute;
+  text-align: center;
+  bottom: -25px;
+  margin-left: -25px;
+  padding-top: 15px;
+  padding-bottom: 5px;
+}
+
+.count-image-bulat {
+  /* width: 25px; */
+  position: absolute;
+  text-align: center;
+  bottom: 500px;
+  margin-left: 0px;
+  padding-top: 15px;
+  padding-bottom: 5px;
+  z-index: -1;
+}
+
+.count-image-titik {
+  /* width: 25px; */
+  position: absolute;
+  text-align: center;
+  bottom: 570px;
+  margin-left: 1420px;
+  padding-top: 15px;
+  padding-bottom: 5px;
+  z-index: -1;
+}
+
+/* .count-image-2 {
+  width: 25px;
+  position: absolute;
+  text-align: center;
+  bottom: -30px;
+  margin-left: -25px;
+  padding-top: 15px;
+  padding-bottom: 5px;
+} */
+/*========= Close Style count-image-1 =========*/
+
 /*========= Open Style Testimonial =========*/
 .group-col-one-testimonial {
   margin-top: 50px;
@@ -716,6 +770,17 @@ h6 {
 .group-btn-contact {
   padding: 50px;
   margin-top: 135px;
+}
+
+.group-btn-contact-portofolio-detail {
+  padding: 20px;
+  /* margin-top: 20px; */
+}
+
+.gruop-text-portofolio-detail {
+  /* padding: 30px; */
+  margin: 50px;
+  /* margin-top: 100px; */
 }
 
 .link-contact {
@@ -1362,6 +1427,36 @@ h6 {
     height: 100%;
   }
 
+  .count-image-1 {
+        /* width: 25px; */
+    position: initial;
+    text-align: center;
+    bottom: -25px;
+    margin: 0px auto;
+    /* margin-left: -25px; */
+    padding-top: 15px;
+    padding-bottom: 5px;
+  }
+
+  .count-image-2 {
+    /* width: 25px; */
+    position: initial;
+    text-align: center;
+    bottom: -25px;
+    margin: 0px auto;
+    /* margin-left: -25px; */
+    padding-top: 15px;
+    padding-bottom: 5px;
+  }
+
+  .count-image-bulat {
+    display: none;
+  }
+
+  .count-image-titik {
+    display: none;
+  }
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 1399px) {
@@ -1516,5 +1611,35 @@ h6 {
     height: 300px;
     margin-top: auto;
     margin-left: -35px;
+  }
+
+  .count-image-1 {
+    /* width: 25px; */
+    position: initial;
+    text-align: center;
+    bottom: -25px;
+    margin: 0px auto;
+    /* margin-left: -25px; */
+    padding-top: 15px;
+    padding-bottom: 5px;
+  }
+
+    .count-image-2 {
+    /* width: 25px; */
+    position: initial;
+    text-align: center;
+    bottom: -25px;
+    margin: 0px auto;
+    /* margin-left: -25px; */
+    padding-top: 15px;
+    padding-bottom: 5px;
+  }
+
+  .count-image-bulat {
+    display: none;
+  }
+
+  .count-image-titik {
+    display: none;
   }
 }
